k8s/overlays/dev/ingress-host-change.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
spec:
  rules:
  - host: dev.smithmilner.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: demo-svc
            port:
              number: 3000
